--- a/src/renderer/lang/plugins/datalist/en_GB.json
+++ b/src/renderer/lang/plugins/datalist/en_GB.json
@@ -1,8 +1,8 @@
 {
     "datalist": {
-        "empty": "No data",
         "display": "Display",
-        "loaded": "All data was loaded",
-        "line": "Number of lines displayed"
+        "empty": "No data",
+        "line": "Number of lines displayed",
+        "loaded": "All data was loaded"
     }
 }
