--- a/src/renderer/lang/screens/app/update/en_GB.json
+++ b/src/renderer/lang/screens/app/update/en_GB.json
@@ -1,7 +1,7 @@
 {
     "app-update": {
         "connection": "Connection",
-        "error": "An error occured while updating the software.",
+        "error": "An error occurred while updating the software.",
         "updating": "Applying updates"
     }
 }
