--- a/src/renderer/lang/screens/partials/list/fight/en_GB.json
+++ b/src/renderer/lang/screens/partials/list/fight/en_GB.json
@@ -9,16 +9,16 @@
             "see-comment": "See the @.lower:common.comments",
             "see-detail": "See details of the @.lower:common.fight"
         },
+        "comment": "@:common.comments of the @.lower:common.fight",
+        "empty": "No @.lower:common.fighter",
+        "fight-screen-open": "The @.lower:common.fight screen is already open by someone",
         "modal": {
-            "title": "Adding a @.lower:common.fight order",
-            "select": "@:common.action.select a @.lower:common.fighter"
+            "select": "@:common.action.select a @.lower:common.fighter",
+            "title": "Adding a @.lower:common.fight order"
         },
         "status": {
             "finished": "Finished",
             "todo": "Todo"
-        },
-        "comment": "@:common.comments of the @.lower:common.fight",
-        "empty": "No @.lower:common.fighter",
-        "fight-screen-open": "The @.lower:common.fight screen is already open by someone"
+        }
     }
 }
