--- a/src/renderer/lang/screens/partials/list/pool/fr.json
+++ b/src/renderer/lang/screens/partials/list/pool/fr.json
@@ -1,9 +1,9 @@
 {
     "pool-list": {
         "number": {
-            "victory": "Nombre de victoires",
             "score-given": "Nombre de ippons marqués",
-            "score-received": "Nombre de ippons reçus"
+            "score-received": "Nombre de ippons reçus",
+            "victory": "Nombre de victoires"
         },
         "ranking-detail": "Détail du classement"
     }
