--- a/src/renderer/lang/screens/partials/list/poolDraw/en_GB.json
+++ b/src/renderer/lang/screens/partials/list/poolDraw/en_GB.json
@@ -1,9 +1,9 @@
 {
     "pool-list-draw": {
+        "launch": "Launch the @.lower:common.draw-random",
         "status": {
             "finished": "@:common.draw-random finished!",
             "ongoing": "@:common.draw-random in progress..."
-        },
-        "launch": "Launch the @.lower:common.draw-random"
+        }
     }
 }
