--- a/src/renderer/lang/store/modules/fight/en_GB.json
+++ b/src/renderer/lang/store/modules/fight/en_GB.json
@@ -10,11 +10,11 @@
                 "verifyBeforeCreate": "@:common.error.occured verifying @:fight.order creation"
             }
         },
+        "order": "@.lower:common.fight order",
         "success": {
             "order": {
                 "update": "@:common.fighter order have been updated"
             }
-        },
-        "order": "@.lower:common.fight order"
+        }
     }
 }
