--- a/src/renderer/lang/config/router/fr.json
+++ b/src/renderer/lang/config/router/fr.json
@@ -1,7 +1,7 @@
 {
     "router": {
         "home": "Tableau de bord",
-        "new-competition": "Nouvelle compétition",
-        "manage-competition": "Gestion de la compétition"
+        "manage-competition": "Gestion de la compétition",
+        "new-competition": "Nouvelle compétition"
     }
 }
