--- a/src/renderer/lang/generic/competition/en_GB.json
+++ b/src/renderer/lang/generic/competition/en_GB.json
@@ -3,13 +3,13 @@
         "action": {
             "close": "Close the @.lower:common.competition"
         },
-        "status": {
-            "waiting": "@.lower:common.fighters validation",
-            "ongoing": "Ongoing",
-            "finished": "Finished"
-        },
         "closed": "@:common.competition is closed",
         "empty": "No data of @.lower:common.competition",
-        "new": "New @.lower:common.competition"
+        "new": "New @.lower:common.competition",
+        "status": {
+            "finished": "Finished",
+            "ongoing": "Ongoing",
+            "waiting": "@.lower:common.fighters validation"
+        }
     }
 }
