✨ (modal) confirmation modal component with variant

--- a/src/lang/plugins/modal/confirmation/en_GB.json
+++ b/src/lang/plugins/modal/confirmation/en_GB.json
@@ -1,6 +1,7 @@
 {
-    "confirmation": {
-        "subtitle": "Do you confirm this action?",
-        "title": "Confirm action"
+    "modal": {
+        "confirmation": {
+            "title": "Do you confirm this action?"
+        }
     }
 }
