--- a/src/lang/plugins/modal/confirmation/fr.json
+++ b/src/lang/plugins/modal/confirmation/fr.json
@@ -1,6 +1,7 @@
 {
-    "confirmation": {
-        "subtitle": "Confirmez-vous cette action ?",
-        "title": "Confirmation d'une action"
+    "modal": {
+        "confirmation": {
+            "title": "Confirmez-vous cette action ?"
+        }
     }
 }
