--- a/src/lang/plugins/modal/confirmation/it.json
+++ b/src/lang/plugins/modal/confirmation/it.json
@@ -1,6 +1,7 @@
 {
-    "confirmation": {
-        "subtitle": "Confermi questa azione?",
-        "title": "Conferma l'azione"
+    "modal": {
+        "confirmation": {
+            "title": "Confermi questa azione?"
+        }
     }
 }
