--- a/src/lang/plugins/modal/en_GB.json
+++ b/src/lang/plugins/modal/en_GB.json
@@ -2,6 +2,9 @@
     "modal": {
         "confirmation": {
             "title": "Do you confirm this action?"
+        },
+        "form": {
+            "title": "Form"
         }
     }
 }
