--- a/src/lang/plugins/modal/fr.json
+++ b/src/lang/plugins/modal/fr.json
@@ -2,6 +2,9 @@
     "modal": {
         "confirmation": {
             "title": "Confirmez-vous cette action ?"
+        },
+        "form": {
+            "title": "Formulaire"
         }
     }
 }
