⚗️ (Feedback) : base form validation + tabs

--- a/src/lang/form-validation/fr.json
+++ b/src/lang/form-validation/fr.json
@@ -1,29 +1,29 @@
 {
     "form-validation": {
-        "alpha": "Le champ {field} ne peut contenir que des lettres",
-        "alpha_num": "Le champ {field} ne peut contenir que des caractères alpha-numériques",
-        "alpha_dash": "Le champ {field} ne peut contenir que des caractères alpha-numériques, tirets ou soulignés",
-        "alpha_spaces": "Le champ {field} ne peut contenir que des lettres ou des espaces",
-        "between": "Le champ {field} doit être compris entre 0:{min} et 1:{max}",
-        "confirmed": "Le champ {field} ne correspond pas",
-        "digits": "Le champ {field} doit être un nombre entier de 0:{length} chiffres",
-        "dimensions": "Le champ {field} doit avoir une taille de 0:{width} pixels par 1:{height} pixels",
-        "email": "Le champ {field} doit être une adresse e-mail valide",
-        "excluded": "Le champ {field} doit être une valeur valide",
-        "ext": "Le champ {field} doit être un fichier valide",
-        "image": "Le champ {field} doit être une image",
-        "integer": "Le champ {field} doit être un entier",
-        "length": "Le champ {field} doit contenir 0:{length} caractères",
-        "max_value": "Le champ {field} doit avoir une valeur de 0:{max} ou moins",
-        "max": "Le champ {field} ne peut pas contenir plus de 0:{length} caractères",
-        "mimes": "Le champ {field} doit avoir un type MIME valide",
-        "min_value": "Le champ {field} doit avoir une valeur de 0:{min} ou plus",
-        "min": "Le champ {field} doit contenir au minimum 0:{length} caractères",
-        "numeric": "Le champ {field} ne peut contenir que des chiffres",
-        "one_of": "Le champ {field} doit être une valeur valide",
-        "regex": "Le champ {field} est invalide",
-        "required": "Le champ {field} est obligatoire",
-        "required_if": "Le champ {field} est obligatoire lorsque {target} possède cette valeur",
-        "size": "Le champ {field} doit avoir un poids inférieur à 0:{size}KB"
+        "alpha": "Ce champ ne peut contenir que des lettres",
+        "alpha_num": "Ce champ ne peut contenir que des caractères alpha-numériques",
+        "alpha_dash": "Ce champ ne peut contenir que des caractères alpha-numériques, tirets ou soulignés",
+        "alpha_spaces": "Ce champ ne peut contenir que des lettres ou des espaces",
+        "between": "Ce champ doit être compris entre 0:{min} et 1:{max}",
+        "confirmed": "Ce champ ne correspond pas",
+        "digits": "Ce champ doit être un nombre entier de 0:{length} chiffres",
+        "dimensions": "Ce champ doit avoir une taille de 0:{width} pixels par 1:{height} pixels",
+        "email": "Ce champ doit être une adresse e-mail valide",
+        "excluded": "Ce champ doit être une valeur valide",
+        "ext": "Ce champ doit être un fichier valide",
+        "image": "Ce champ doit être une image",
+        "integer": "Ce champ doit être un entier",
+        "length": "Ce champ doit contenir 0:{length} caractères",
+        "max_value": "Ce champ doit avoir une valeur de 0:{max} ou moins",
+        "max": "Ce champ ne peut pas contenir plus de 0:{length} caractères",
+        "mimes": "Ce champ doit avoir un type MIME valide",
+        "min_value": "Ce champ doit avoir une valeur de 0:{min} ou plus",
+        "min": "Ce champ doit contenir au minimum 0:{length} caractères",
+        "numeric": "Ce champ ne peut contenir que des chiffres",
+        "one_of": "Ce champ doit être une valeur valide",
+        "regex": "Ce champ est invalide",
+        "required": "Ce champ est obligatoire",
+        "required_if": "Ce champ est obligatoire lorsque {target} possède cette valeur",
+        "size": "Ce champ doit avoir un poids inférieur à 0:{size}KB"
     }
 }
