--- a/src/lang/form-validation/en_GB.json
+++ b/src/lang/form-validation/en_GB.json
@@ -1,30 +1,30 @@
 {
     "form-validation": {
-        "alpha": "The {field} field may only contain alphabetic characters",
-        "alpha_num": "The {field} field may only contain alpha-numeric characters",
-        "alpha_dash": "The {field} field may contain alpha-numeric characters as well as dashes and underscores",
-        "alpha_spaces": "The {field} field may only contain alphabetic characters as well as spaces",
-        "between": "The {field} field must be between 0:{min} and 1:{max}",
-        "confirmed": "The {field} field confirmation does not match",
-        "digits": "The {field} field must be numeric and exactly contain 0:{length} digits",
-        "dimensions": "The {field} field must be 0:{width} pixels by 1:{height} pixels",
-        "email": "The {field} field must be a valid email",
-        "excluded": "The {field} field is not a valid value",
-        "ext": "The {field} field is not a valid file",
-        "image": "The {field} field must be an image",
-        "integer": "The {field} field must be an integer",
-        "length": "The {field} field must be 0:{length} long",
-        "max_value": "The {field} field must be 0:{max} or less",
-        "max": "The {field} field may not be greater than 0:{length} characters",
-        "mimes": "The {field} field must have a valid file type",
-        "min_value": "The {field} field must be 0:{min} or more",
-        "min": "The {field} field must be at least 0:{length} characters",
-        "numeric": "The {field} field may only contain numeric characters",
-        "one_of": "The {field} field is not a valid value",
-        "regex": "The {field} field format is invalid",
-        "required_if": "The {field} field is required",
-        "required": "The {field} field is required",
-        "size": "The {field} field size must be less than 0:{size}KB",
-        "url": "The {field} field is not a valid URL"
+        "alpha": "This field may only contain alphabetic characters",
+        "alpha_num": "This field may only contain alpha-numeric characters",
+        "alpha_dash": "This field may contain alpha-numeric characters as well as dashes and underscores",
+        "alpha_spaces": "This field may only contain alphabetic characters as well as spaces",
+        "between": "This field must be between 0:{min} and 1:{max}",
+        "confirmed": "This field confirmation does not match",
+        "digits": "This field must be numeric and exactly contain 0:{length} digits",
+        "dimensions": "This field must be 0:{width} pixels by 1:{height} pixels",
+        "email": "This field must be a valid email",
+        "excluded": "This field is not a valid value",
+        "ext": "This field is not a valid file",
+        "image": "This field must be an image",
+        "integer": "This field must be an integer",
+        "length": "This field must be 0:{length} long",
+        "max_value": "This field must be 0:{max} or less",
+        "max": "This field may not be greater than 0:{length} characters",
+        "mimes": "This field must have a valid file type",
+        "min_value": "This field must be 0:{min} or more",
+        "min": "This field must be at least 0:{length} characters",
+        "numeric": "This field may only contain numeric characters",
+        "one_of": "This field is not a valid value",
+        "regex": "This field format is invalid",
+        "required_if": "This field is required",
+        "required": "This field is required",
+        "size": "This field size must be less than 0:{size}KB",
+        "url": "This field is not a valid URL"
     }
 }
